menu overflow fixed

--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -46,5 +46,9 @@
     font-weight: bold;
     color: $colorBlue;
     text-decoration: none;
+
+    &:hover {
+      text-shadow: 0 1px 1px rgba(0, 83, 181, 0.46);
+    }
   }
 }
